--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <link href="images/FavIcon48.png" rel="shortcut icon" />
-		<title>TB - SAP Entwicklung und Beratung</title>
-		<script id="sap-ui-bootstrap"
-				src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-				data-sap-ui-theme="sap_fiori_3"
-				data-sap-ui-resourceroots='{"Homepage.Homepage": "./"}'
-				data-sap-ui-compatVersion="edge"
-				data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
-				data-sap-ui-async="true"
-				data-sap-ui-frameOptions="trusted">
-		</script>
-	</head>
-	<body class="sapUiBody">
-		<div	data-sap-ui-component 
-				data-name="Homepage.Homepage" 
-				data-id="container" 
-				data-settings='{"id" : "Homepage"}'>
-		</div>
-	</body>
+<html lang="en">
+<head>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="images/FavIcon48.png" rel="shortcut icon" />
+	<title>TB - SAP Entwicklung und Beratung</title>
+	<style>
+		html, body, body > div, #container, #container-uiarea {
+			height: 100%;
+		}
+	</style>
+	<script
+			id="sap-ui-bootstrap"
+			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+			data-sap-ui-theme="sap_fiori_3"
+			data-sap-ui-resourceroots='{"Homepage.Homepage": "."}'
+			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
+			data-sap-ui-compatVersion="edge"
+			data-sap-ui-async="true"
+			data-sap-ui-preload="async"
+			data-sap-ui-libs="sap.m"
+			data-sap-ui-frameOptions="trusted">
+	</script>
+</head>
+<body class="sapUiBody sapUiSizeCompact" id="content">
+<div 	data-sap-ui-component data-name="Homepage.Homepage" 
+ 	data-id="container"
+	data-settings='{"id" : "Homepage.Homepage"}' 
+	data-handle-validation="true">
+</div>
+</body>
 </html>
-
-<!-- src="resources/sap-ui-core.js" -->
